feat: setting for controlling categories included in footer

--- a/source/settings.json
+++ b/source/settings.json
@@ -869,6 +869,13 @@
       "description": "Sets the display of prices in your shop"
     },
     {
+      "variable": "show_categories_in_footer",
+      "label": "Show categories in footer",
+      "type": "boolean",
+      "default": true,
+      "description": "Show categories in the footer"
+    },
+    {
       "variable": "footer_text",
       "label": "Footer text",
       "type": "text",
