--- a/source/settings.json
+++ b/source/settings.json
@@ -1,6 +1,6 @@
 {
   "name": "Cosmos",
-  "version": "1.4.0",
+  "version": "1.5.0",
   "images": [
     {
       "variable": "logo_image",
@@ -1032,14 +1032,21 @@
       "label": "Show categories in footer",
       "type": "boolean",
       "default": true,
-      "description": "Show categories in the footer"
+      "description": "Display product category links at the bottom of every page"
+    },
+    {
+      "variable": "show_custom_pages_in_footer",
+      "label": "Show custom pages in footer",
+      "type": "boolean",
+      "default": true,
+      "description": "Display links to your custom pages at the bottom of every page"
     },
     {
       "variable": "footer_text",
       "label": "Footer text",
       "type": "text",
       "max_length": 2048,
-      "description": "Show a custom message to your shop's footer"
+      "description": "Show a custom message in your shop's footer"
     },
     {
       "variable": "footer_text_position",
