fix: accessibility of Playful 2 style preset

--- a/source/settings.json
+++ b/source/settings.json
@@ -261,8 +261,8 @@
               "background_color": "#FF6B6B",
               "text_color": "#FFFFFF",
               "link_text_color": "#FFFFFF",
-              "link_hover_color": "#4ECDC4",
-              "shop_name_text_color": "#4ECDC4",
+              "link_hover_color": "#FFE81A",
+              "shop_name_text_color": "#FFFFFF",
               "header_text_color": "#FFFFFF",
               "border_color": "#FF8787",
               "button_background_color": "#4ECDC4",
@@ -270,11 +270,11 @@
               "button_text_color": "#FFFFFF",
               "announcement_background_color": "#FF5252",
               "announcement_text_color": "#FFFFFF",
-              "product_status_text_color": "#FF6B6B",
+              "product_status_text_color": "#FFFFFF",
               "product_status_background_color": "#4ECDC4",
               "product_status_text_color_secondary": "#FFFFFF",
               "product_status_background_color_secondary": "#FF8787",
-              "inventory_status_text_color": "#4ECDC4",
+              "inventory_status_text_color": "#FFEC4A",
               "hero_overlay_color": "#FF5252",
               "hero_text_color": "#FFFFFF",
               "product_hover_overlay_color": "#4ECDC4",
