feat: Adds text transform option for shop header
Introduces a customizable text transform setting for the shop header, allowing users to choose between normal, uppercase, or lowercase styling. Updates relevant stylesheets to apply the selected transformation dynamically.

--- a/source/settings.json
+++ b/source/settings.json
@@ -727,6 +727,18 @@
       ]
     },
     {
+      "variable": "nav_text_transform",
+      "label": "Transform text in shop header",
+      "type": "select",
+      "options": [
+        ["Normal", "initial"],
+        ["Uppercase", "uppercase"],
+        ["Lowercase", "lowercase"]
+      ],
+      "default": "initial",
+      "description": "Controls the text case styling in your shop header"
+    },
+    {
       "variable": "hero_image_width",
       "label": "Hero image width",
       "type": "select",
